Создана шапка проекта

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Заголовок моего сайта</h1>
+    </header>
+  </body>
 </html>
